--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,18 +1,27 @@
-<!--
-  Generated template for the LoginPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title>Login Page</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-<button ion-button full (click)="this.navCtrl.setRoot('MenuPage');">Login</button>
+
+	<ion-item>
+		<ion-label>Email:</ion-label>
+		<ion-input [(ngModel)]="email"></ion-input>
+	</ion-item>
+
+	<ion-item>
+		<ion-label>Password:</ion-label>
+		<ion-input type="password" [(ngModel)]="password"></ion-input>
+	</ion-item>
+
+	<div text-center>
+		<button ion-button (click)='register(email, password)'>Register</button>
+		<button ion-button (click)='login(email, password)'>Login</button>
+
+	</div>
 </ion-content>
