--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,7 +8,7 @@
 
 
 <ion-content padding>
-
+<div text-center  style = "position:absolute;  top:100px; background-color: grey">
 	<ion-item>
 		<ion-label>Email:</ion-label>
 		<ion-input [(ngModel)]="email"></ion-input>
@@ -18,9 +18,9 @@
 		<ion-label>Password:</ion-label>
 		<ion-input type="password" [(ngModel)]="password"></ion-input>
 	</ion-item>
-
-	<div text-center>
-		<button ion-button (click)='register(email, password)'>Register</button>
+</div>
+	<div text-center  style = "position:absolute; left:80px; top:200px;">
+		<button ion-button  (click)='register(email, password)'>Register</button>
 		<button ion-button (click)='login(email, password)'>Login</button>
 
 	</div>
