--- a/src/pages/tab2/tab2.html
+++ b/src/pages/tab2/tab2.html
@@ -11,7 +11,7 @@
   			<ion-icon name="menu"></ion-icon>
   		</button>
   	</ion-buttons>
-    <ion-title>tab2</ion-title>
+    <ion-title></ion-title>
   </ion-navbar>
 
 </ion-header>
