--- a/src/pages/tab2/tab2.html
+++ b/src/pages/tab2/tab2.html
@@ -18,7 +18,12 @@
 
 
 <ion-content padding>
-
-
+<ion-list>
+  <button ion-item *ngFor="let note of notes | async" (click)="getNote(note.createDate)">
+    <span class = "date">{{ note.date }}</span>
+    {{ note.title }}
+  </button> 
+</ion-list>
+<button ion-button (click)="addNote()">Add note</button>
 
 </ion-content>
